Archive2/9b/0122e535868b30/output
main.cpp: In function 'int main()':
main.cpp:38:54: error: no matching function for call to 'Vector_container::Vector_container(<brace-enclosed initializer list>)'
     Vector_container vc{10, 9, 8, 7, 6, 5, 4, 3, 2, 1};
                                                      ^
main.cpp:38:54: note: candidate is:
main.cpp:21:7: note: constexpr Vector_container::Vector_container(const Vector_container&)
 class Vector_container:public Container{
       ^
main.cpp:21:7: note:   candidate expects 1 argument, 10 provided
